--- a/service_restaurant/Dockerfile
+++ b/service_restaurant/Dockerfile
@@ -1,12 +1,17 @@
-FROM openjdk:11 as builder
+FROM openjdk:17 as builder
 
+WORKDIR /app
 
 COPY . .
 
+RUN sed -i 's/\r$//' ./gradlew && chmod +x ./gradlew
+
 RUN ./gradlew buildFatJar
 
-FROM openjdk:11
+FROM openjdk:17 
 
-COPY --from=builder /build/libs/service_restaurant.jar ./service_restaurant.jar
+COPY --from=builder /app/build/libs/service_restaurant.jar service_restaurant.jar
 
 CMD ["java", "-jar", "service_restaurant.jar"]
+
+EXPOSE 8085
