Add docker config, change logs level, and some fixes

--- a/api_gateway/Dockerfile
+++ b/api_gateway/Dockerfile
@@ -10,8 +10,8 @@ RUN ./gradlew buildFatJar
 
 FROM openjdk:11
 
-COPY --from=builder /app/build/libs/service_identity.jar service_identity.jar
+COPY --from=builder /app/build/libs/api_gateway.jar api_gateway.jar
 
-CMD ["java", "-jar", "service_identity.jar"]
+CMD ["java", "-jar", "api_gateway.jar"]
 
-EXPOSE 8082
+EXPOSE 8080
