--- a/service_chat/Dockerfile
+++ b/service_chat/Dockerfile
@@ -10,8 +10,8 @@ RUN ./gradlew buildFatJar
 
 FROM openjdk:11
 
-COPY --from=builder /app/build/libs/service_identity.jar service_identity.jar
+COPY --from=builder /app/build/libs/service_chat.jar service_chat.jar
 
-CMD ["java", "-jar", "service_identity.jar"]
+CMD ["java", "-jar", "service_chat.jar"]
 
-EXPOSE 8082
+EXPOSE 8081
